fix(menu): fix icons position and alignment in submenus
When icon groups were used in submenus, they were wrongly positioned and the the icon group itself was totally messed up

--- a/src/definitions/collections/menu.less
+++ b/src/definitions/collections/menu.less
@@ -252,7 +252,8 @@
 .ui.menu .ui.dropdown.item .menu .item:not(.filtered) {
   display: block;
 }
-.ui.menu .ui.dropdown .menu > .item .icon:not(.dropdown) {
+.ui.menu .ui.dropdown .menu > .item > .icons,
+.ui.menu .ui.dropdown .menu > .item > .icon:not(.dropdown) {
   display: inline-block;
   font-size: @dropdownItemIconFontSize !important;
   float: @dropdownItemIconFloat;
